manifests/30-mlflow/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: mlflow
  labels:
    name: mlflow
