manifests/30-mlflow/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow
  labels:
    app: mlflow
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: mlflow
  type: ClusterIP
